# stablecoin-dashboard

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml  requirements.txt  stablecoin.db  streamlit_app.py
agents/: api_ingestion.md  cost_control.md  dashboard_builder.md  data_quality.md  improvement_prompt.md  risk_scoring.md  run_loop.sh  stablecoin_research.md
core/: budget.py  cache.py  http.py
db/: models.py  schema.sql
docs/: api_costs.md  dashboard_metrics.md  data_dictionary.md
ingestion/: _base.py  coingecko.py  defillama.py  etherscan.py  exchanges.py  thegraph.py
pipelines/: score_stablecoins.py  update_liquidity.py  update_prices.py  update_reserves.py  update_supply.py
scripts/: backfill.py  daily_update.sh  hourly_update.sh
services/: __init__.py  alerts.py  chain_concentration.py  data_validation.py  dominance.py  freshness.py  liquidity.py  market_changes.py  pipeline_runs.py  profile.py  provider_fallback.py  readiness.py  regimes.py  risk_events.py  score_explanation.py  supply.py  watchlist.py
tests/: conftest.py  test_alerts.py  test_api.py  test_chain_concentration.py  test_cost_limits.py  test_data_validation.py  test_db_models.py  test_defillama.py  test_dominance.py  test_freshness.py  test_liquidity.py  test_market_changes.py  test_pipeline_runs.py  test_pipelines.py  test_prices.py  test_profile.py  test_provider_fallback.py  test_readiness.py  test_regimes.py  test_risk_events.py  test_score_explanation.py  test_scoring.py  test_supply.py  test_tracked_get.py  test_watchlist.py
(+4 files in other folders)
